// Modules
import React from "react";
import { customRender } from "utils/customRender";

// Accessibility
import { axe, toHaveNoViolations } from "jest-axe";

// Elements
import GroupAbilities from "organisms/GroupAbilities/GroupAbilities";

// Definitions
import type { GroupAbilitiesProps } from "organisms/GroupAbilities/GroupAbilities";

// Default Props
const defaultIcon =
	"M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z";

const defaultProps: GroupAbilitiesProps = {
	abilities: [
		{
			title: "Best ability 1",
			description: (
				<p>
					This is one of the <b>best</b> abilities
				</p>
			),
			icon: defaultIcon
		},
		{ title: "Best ability 2", description: <p>And this one too</p>, icon: defaultIcon }
	]
};

// Tests
expect.extend(toHaveNoViolations);
describe("GroupAbilities", () => {
	it("Renders as expected and has no accessibility violations", async () => {
		const { container } = customRender(<GroupAbilities {...defaultProps} />);
		expect(container).toMatchSnapshot();
		expect(await axe(container)).toHaveNoViolations();
	});
	it("Renders as expected with motion", () => {
		const { container } = customRender(<GroupAbilities {...defaultProps} animated={true} />);
		expect(container).toMatchSnapshot();
	});
});
