// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupAbilities Renders as expected and has no accessibility violations 1`] = `
<div>
  <div
    class="grid md:gap-x-12 gap-y-10 grid-cols-2 md:grid-cols-3 gap-x-4"
  >
    <div
      class="w-full h-full flex-col flex items-center"
    >
      <div
        class="md:w-1/5 w-2/5"
      >
        <div
          class="sc-bdvvtL gnQPDc rounded-full relative flex"
          data-testid="container"
          height="100%"
          width="100%"
        >
          <div
            class="h-full flex justify-center items-center"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root sc-gsDKAQ fRMNeN"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                color="#3CEB93"
                d="M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z"
              />
            </svg>
          </div>
          <div
            style="margin-top: 100%;"
          />
        </div>
      </div>
      <div
        class="mt-4 mb-2"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter"
        >
          Best ability 1
        </h3>
      </div>
      <p>
        This is one of the 
        <b>
          best
        </b>
         abilities
      </p>
    </div>
    <div
      class="w-full h-full flex-col flex items-center"
    >
      <div
        class="md:w-1/5 w-2/5"
      >
        <div
          class="sc-bdvvtL gnQPDc rounded-full relative flex"
          data-testid="container"
          height="100%"
          width="100%"
        >
          <div
            class="h-full flex justify-center items-center"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root sc-gsDKAQ fRMNeN"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                color="#3CEB93"
                d="M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z"
              />
            </svg>
          </div>
          <div
            style="margin-top: 100%;"
          />
        </div>
      </div>
      <div
        class="mt-4 mb-2"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter"
        >
          Best ability 2
        </h3>
      </div>
      <p>
        And this one too
      </p>
    </div>
  </div>
</div>
`;

exports[`GroupAbilities Renders as expected with motion 1`] = `
<div>
  <div
    class="grid md:gap-x-12 gap-y-10 grid-cols-2 md:grid-cols-3 gap-x-4"
  >
    <div
      class="w-full h-full flex-col flex items-center"
      style="opacity: 0; transform: rotateY(90deg) translateZ(0);"
    >
      <div
        class="md:w-1/5 w-2/5"
      >
        <div
          class="sc-bdvvtL gnQPDc rounded-full relative flex"
          data-testid="container"
          height="100%"
          width="100%"
        >
          <div
            class="h-full flex justify-center items-center"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root sc-gsDKAQ fRMNeN"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                color="#3CEB93"
                d="M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z"
              />
            </svg>
          </div>
          <div
            style="margin-top: 100%;"
          />
        </div>
      </div>
      <div
        class="mt-4 mb-2"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter"
        >
          Best ability 1
        </h3>
      </div>
      <p>
        This is one of the 
        <b>
          best
        </b>
         abilities
      </p>
    </div>
    <div
      class="w-full h-full flex-col flex items-center"
      style="opacity: 0; transform: rotateY(90deg) translateZ(0);"
    >
      <div
        class="md:w-1/5 w-2/5"
      >
        <div
          class="sc-bdvvtL gnQPDc rounded-full relative flex"
          data-testid="container"
          height="100%"
          width="100%"
        >
          <div
            class="h-full flex justify-center items-center"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root sc-gsDKAQ fRMNeN"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                color="#3CEB93"
                d="M17.218,2.268L2.477,8.388C2.13,8.535,2.164,9.05,2.542,9.134L9.33,10.67l1.535,6.787c0.083,0.377,0.602,0.415,0.745,0.065l6.123-14.74C17.866,2.46,17.539,2.134,17.218,2.268 M3.92,8.641l11.772-4.89L9.535,9.909L3.92,8.641z M11.358,16.078l-1.268-5.613l6.157-6.157L11.358,16.078z"
              />
            </svg>
          </div>
          <div
            style="margin-top: 100%;"
          />
        </div>
      </div>
      <div
        class="mt-4 mb-2"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter"
        >
          Best ability 2
        </h3>
      </div>
      <p>
        And this one too
      </p>
    </div>
  </div>
</div>
`;
